@@ -183,7 +183,7 @@ class LuaOpenGL {
 		static int LogicOp(lua_State* L);
 		static int Fog(lua_State* L) { return 0; }
 		static int AlphaTest(lua_State* L);
-		static int LineStipple(lua_State* L);
+		static int LineStipple(lua_State* L) { return 0; }
 		static int Blending(lua_State* L);
 		static int BlendEquation(lua_State* L);
 		static int BlendFunc(lua_State* L);
