@@ -68,6 +68,7 @@ Lua:
  - remove gl.Shape
  - remove gl.EdgeFlag
  - remove gl.GetGlobalTex{Names,Coords}
+ - remove gl.LineStipple
  - remove {Unit,Feature}Rendering.{SetPieceList,SetMaterialDisplayLists}
  - remove LuaMaterial {pre,post}list handling
  - remove 'useCamera' LuaMaterial parameter
